--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
   <title>پروژه مدیریت مخاطبین</title>
-</head> 
+</head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -18,7 +18,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <!-- <script src="https://kit.fontawesome.com/ff57b1744a.js" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
